<Added a scrolling element to horizontal cards to stop overlap>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,8 @@ footer {
     }
     /* Make career cards stay horizontal at different screen sizes */
     .career-card {
-        max-height: 300px;
+        max-height: 202px;
+        overflow-y: auto;
     }
     .img-fluid {
         max-height: 300px;
